# signgeom

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/signgeom-aperiodic/: Cargo.toml
crates/signgeom-aperiodic/src/: lib.rs
crates/signgeom-cli/: Cargo.toml
crates/signgeom-cli/src/: main.rs
crates/signgeom-core/: Cargo.toml
crates/signgeom-core/benches/: geodesic.rs
crates/signgeom-core/examples/: README.md  dichronauts_geodesic.rs  light_cone_orthogonal.rs  schwarzschild_compare.rs
crates/signgeom-core/src/: christoffel.rs  curvature.rs  error.rs  flat.rs  geodesic.rs  lib.rs  manifold.rs  schwarzschild.rs  signature.rs
crates/signgeom-core/tests/: integration_known_metrics.rs  integration_schwarzschild.rs  property_geodesics.rs  property_signature.rs
crates/signgeom-lenia/: Cargo.toml
crates/signgeom-lenia/src/: lib.rs
docs/: architecture.d2
docs/announcements/: README.md  mathstodon.md  r-rust.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  benchmark.md  christoffel.md  curvature.md  egan-physics.md  failure-museum.md  geodesic.md  intro.md  license-strategy.md  release-process.md  signature.md
experiments/_wip/: .gitkeep
plugins/egan-applets/: LICENSE-PENDING.md
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: style.css
web/src/: integrator.ts  main.ts  shader.wgsl  signature.ts
