[workspace]
resolver = "2"
members = [
    "crates/signgeom-core",
    "crates/signgeom-aperiodic",
    "crates/signgeom-lenia",
    "crates/signgeom-cli",
]
default-members = ["crates/signgeom-core", "crates/signgeom-cli"]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/hinanohart/signgeom"
homepage = "https://github.com/hinanohart/signgeom"
authors = ["signgeom contributors"]
keywords = ["geometry", "physics", "differential-geometry", "manifold", "visualization"]
categories = ["mathematics", "science", "simulation"]

[workspace.dependencies]
signgeom-core = { path = "crates/signgeom-core", version = "0.1.2" }
signgeom-aperiodic = { path = "crates/signgeom-aperiodic", version = "0.1.2" }
signgeom-lenia = { path = "crates/signgeom-lenia", version = "0.1.2" }
thiserror = "2.0"
num-traits = "0.2"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.5"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1
