[package]
name = "signgeom-aperiodic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Wang-tile and einstein-hat aperiodic tilings on signature-aware manifolds."
readme = "../../README.md"

[dependencies]
signgeom-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
