[package]
name = "signgeom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Signature-parametric Riemannian / pseudo-Riemannian geometry — Manifold trait, Christoffel symbols, geodesics."
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "geodesic"
harness = false
